build.gradle updated

--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,6 @@ plugins {
     alias(libs.plugins.jetbrainsKotlinAndroid) apply false
 }
 
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
