--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,8 +1,31 @@
-name: hello-world
-on: push
+name: Build
+
+on:
+  push:
+    branches:
+      - main  
+      - master 
+  pull_request:
+    branches:
+      - main  
+      - master 
+
 jobs:
-  my-job:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: my-step
-        run: echo "Hello World!"
+    - name: Checkout repository
+      uses: actions/checkout@v2
+      
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '11'
+
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      
+    - name: Build with Gradle
+      run: ./gradlew build
